# bss

./: .gitignore  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY_GAPS.md  VISUAL_GUIDE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  show_and_tell.md
.github/workflows/: ci.yml
active/: 00001U~~^!!^;,!=.md  00007A~~>!.^;!!=..md  00007A~~}!.^;!!=..md  00008A~~>!.^;!!=..md  00008A~~}!.^;!!=..md  00009A~~>!.^;!!=..md  00009A~~}!.^;!!=..md  0000AA~.<!.^;!!=..md  0000AA~.{!.^;!!=..md  0000BA~.+!!#!=!=..md
archive/foundation/: 00001U~~^!!^;!!=..md  00003A~.+!!#!-~=..md  00004A~.+!!#!=~=..md  00005A~.+!!#!=~=..md  00006A~.+!!#!=~=..md
bss_spec/: BSS_ARTIFACT_INTEGRATION.md  BSS_SPEC_v1.md  BSS_SPEC_v3.0.md  BSS_V1_BUILD_PLAN.md
cli/: main.py
dashboard/: __init__.py  server.py
dashboard/static/css/: dashboard.css
dashboard/static/js/: analytics.js  artifacts.js  chat.js  cmdpalette.js  composer.js  convergence.js  conversations.js  core.js  export.js  feed.js  glossary.js  grammar.js  graph.js  health.js  lineage.js  overview.js  reference.js  relay.js  runner.js  search.js  settings.js  taskboard.js  timeline.js
dashboard/templates/: index.html
docs/: ARCHITECTURE.md  INTEGRATING.md  PATTERNS.md
docs/ai-instructions/: CLAUDE.md  README.md
integrations/: __init__.py  config.example.yaml  discovery.py  models.py  runner.py  session.py  setup.py
integrations/providers/: __init__.py  anthropic.py  gemini.py  gguf.py  huggingface.py  openai_compat.py
profile/: 00002S~~^!!^;.!=..md  00002S~~^!!^;.!=.md
relay/: 0000CA~!+!=#;=!=..md  0000DA~!^.=#.-~==.md  0000EA~!^.=#.-~==.md  0000FA~!^.=#.-~==.md  0000GA~!^.=#.-~==.md
src/bss/: __init__.py  blink_file.py  bss_logger.py  environment.py  generations.py  identifier.py  relay.py  roster.py  sigils.py
terminal/: __init__.py  app.py  gateway.py  setup_screen.py
terminal/onboarding/: __init__.py  backend_config.py  blink_grammar.py  env_init.py  example_swarm.py  protocol_primer.py  roster_setup.py  summary.py  system_check.py  welcome.py
terminal/visualizations/: __init__.py  blink_timeline.py  lifecycle_diagram.py  lineage_tree.py  relay_status.py
tests/: test_artifacts.py  test_blink_file.py  test_bss_logger.py  test_cli_commands.py  test_discovery.py  test_environment.py  test_graph.py  test_identifier.py  test_integration.py  test_providers.py  test_relay.py  test_roster_management.py  test_runner.py  test_session.py  test_setup.py  test_setup_screen.py
