[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "blink-sigil-system"
version = "1.0.0"
description = "Reference implementation of the Blink Sigil System — a file-based coordination protocol for stateless AI models operating in relay."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Alembic AI"},
    {name = "Cam"},
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
bss = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
